Fix l'alignement top des spell

--- a/css/format-classique.css
+++ b/css/format-classique.css
@@ -92,7 +92,6 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
 }
 
 .champion-header {
@@ -122,17 +121,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    
     width: 100%;
+    height: 100%;
     padding-left: 25px;
 }
 
 .champion-spell {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
+    height: 100%;
     padding-right: 25px;
 }
 
